# Sparse-to-Continuous

./: .gitignore  LICENSE  README.md
catkin_ws/src/fcrn/src/scripts/: ros_image2pred.py  ros_image2pred_lrmjose.py  ros_talker_predict_cv.py
cvpp/projects/temporal3d/src/: main_marching.cpp  main_process.cpp  main_vector.cpp
cvpp/projects/temporal3d/src/auxiliar/: aux_load.h  aux_process.h
cvpp/projects/temporal3d/src/cnn/: main_cnn_comp.cpp  main_cnn_hilbert.cpp  main_cnn_new.cpp
cvpp/projects/temporal3d/src/cnn/BACKUP/: main_cnn_hilbert_backup.cpp  main_cnn_hilbert_backup2.cpp
cvpp/projects/temporal3d/src/cnn_hilbert/: main_cnn_hilbert (3rd copy).cpp  main_cnn_olorin.cpp  main_cnn_olorin_carina.cpp  main_cnn_olorin_kitti_nick[dataset_formato antigo].cpp  main_cnn_olorin_kitti_nick_fix_missing_images.cpp  main_cnn_olorin_kitti_vitor.cpp
cvpp/projects/temporal3d/src/cnn_hilbert/backup/: aux_process.h  main_cnn_hilbert (another copy).cpp  main_cnn_hilbert.cpp  main_cnn_olorin.cpp
cvpp/projects/temporal3d/src/cnn_hilbert/model/: proj_create.cpp  proj_model.cpp
cvpp/projects/temporal3d/src/hilbert/: hm_map.h
cvpp/projects/temporal3d/src/hilbert/backup/: hm_functions.h  hm_map (copy).h
cvpp/projects/temporal3d/src/update/: main_comparison.cpp
cvpp/projects/temporal3d/src/update/code/: aux_detect.h  aux_hilbert.h  aux_load.h  class_cluster.h  class_group.h
cvpp_contrib/: install_dependencies.sh
cvpp_contrib/projects/temporal3d/: CMakeLists.txt
cvpp_contrib/projects/temporal3d/src/: download_campus.txt  main_incremental.cpp  main_marching2.cpp  main_motion.cpp
cvpp_contrib/projects/temporal3d/src/cnn/: aux_cnn.h  main_cnn.cpp  main_cnn_comp2.cpp  main_cnn_single.cpp
cvpp_contrib/projects/temporal3d/src/cnn/BACKUP/: main_cnn_hilbert.cpp
cvpp_contrib/projects/temporal3d/src/cnn_hilbert/: aux_loads.h  aux_process.h  main_cnn_hilbert (copy).cpp  main_cnn_olorin_kitti_nick.cpp
cvpp_contrib/projects/temporal3d/src/cnn_hilbert/backup/: aux_loads.h  main_cnn_olorin_run.cpp
cvpp_contrib/projects/temporal3d/src/cnn_hilbert/model/: proj_generate.cpp  proj_generate_check.cpp  proj_generate_create.cpp
cvpp_contrib/projects/temporal3d/src/hilbert/: hm_functions.h
cvpp_contrib/projects/temporal3d/src/hilbert/backup/: hm_incremental.h  hm_map.h
cvpp_contrib/projects/temporal3d/src/update/: main_temporal3d.cpp
cvpp_contrib/projects/temporal3d/src/update/code/: aux_align.h  aux_propagate.h  aux_propagate_comp.h  class_map.h
cvpp_contrib/projects/temporal3d/src/update/comp/hilbert/: hm_functions.h  hm_map.h
tensorflow/: evaluate_depth_densification_by_close_operation.py  predict_cv.py  predict_nick.py  requirements.txt
tensorflow/data/: README.md  idrid_test.txt  idrid_train.txt
tensorflow/data/new_splits/kitti_splits_based_on_kitti_depth_split/: generate_new_split_kitti_continuous.py  generate_new_split_kitti_discrete.py
tensorflow/modules/: args.py  dataloader.py  framework.py  loss.py  metrics.py  plot.py  test.py  train.py  utils.py  validation.py
tensorflow/modules/datasets/: idrid.py
